# linux_library_gst-plugin-camera

./: Makefile  Makefile.am  configure.ac  gstcamerasrc.c  gstcamerasrc.h
debian/: changelog
packaging/: gst-plugins-camera-s5p6818.spec
